--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,36 @@
 .header {
-  font-weight: bold;
-  margin: 1em 0;
+    font-weight: bold;
+    margin: 1em 0;
 }
 
 form {
-  text-align: center;
-  margin: 0 1em;
+    text-align: center;
+    margin: 0 1em;
 }
 
 .assignments {
-  margin: 0.5em 0;
+    margin: 0.5em 0;
 }
 
 input {
-  margin: 0 0.5em;
+    margin: 0 0.5em;
 }
 
 button {
-  margin: 0 0.2em;
+    margin: 0 0.2em;
 }
 
 .newToDoForm {
-  margin: 2em 0;
+    margin: 2em 0;
 }
 
 .loginAndLogButtons {
-  margin-top: 1em;
-  display: flex;
+    margin-top: 1em;
+    display: flex;
+}
+
+.loginAlert {
+    text-align: center;
+    color: darkslategray;
+    margin-top: 2em;
 }
